# snow

./: .gitmodules  CMakeLists.txt  README.md
sandbox/: CMakeLists.txt
sandbox/src/: ExampleWindow.h  XWindowData.h  main.cpp
sandbox/src/Input/: Keyboard.h  LinuxKey.h
snow/: CMakeLists.txt
snow/assets/shaders/base/: vertex.shader
snow/assets/shaders/x11/: fragment.glsl
snow/src/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.h  Snow.h  Window.cpp  Window.h  pch.h
snow/src/Snow/: Application.cpp  Application.h  Camera.h  CameraSystem.h  Core.h  Log.cpp  Log.h  Resources.cpp  Resources.h  Window.cpp  Window.h
snow/src/Snow/Core/: CameraComponent.h  Screen.cpp  Screen.h  SpriteComponent.h  SpriteRendererSystem.h  Time.cpp  Time.h  TransformComponent.h
snow/src/Snow/Events/: Event.cpp  Event.h
snow/src/Snow/GUI/: GUI.cpp  GUI.h  Window.h  imgui_impl_opengl3.h
snow/src/Snow/GUI/Backends/: build.cpp
snow/src/Snow/Graphics/: RenderTexture.cpp  RenderTexture.h  Renderer.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h
snow/src/Snow/Input/: Input.cpp  Input.h  InputState.h  Key.h
